OmNama/src/app/components/contact-us/contact-us.component.css
 .container{
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	border-radius: 7px;
	
 }
 .contact-details ul li img {
	margin-top: 0;
}
.contact-area{
	margin-top: 0;
	padding-top: 90px;
	padding-bottom:100px;
	padding-right : auto
}
.contact-area .contact-details li {
  overflow: hidden;
}
.main-contact input,
.tnm-textarea textarea {
	background-color: white;
	border: inherit;
	border-radius: 0px;
	box-shadow: inherit;
	color: black;
	font-size: 13px;
	height: 44px;
	outline: medium none;
	padding: 5px 20px;
	transition: all 0.3s ease 0s;
	width: 100%;
	border-color: rgba(249, 239, 229, 0.612);
	font-family: 'Times New Roman', Times, serif;
	box-shadow: rgba(0,0,0,0.4) 0 0 8px;
}
.main-contact input{
	align-self: center
}
.main-contact {
	margin-bottom: 15px;
}
.tnm-textarea textarea {
	height: 130px;
	padding: 15px 30px;
}
.submit input {
	background-color: #ffc400;
	border: 1px solid #ffc400;
	color: #fff;
	display: inline-block;
	font-size: 16px;
	font-weight: normal;
	margin-top: 35px;
	padding: 10px 40px 8px;
	text-transform: uppercase;
	transition: all 0.3s ease 0s;
}
.submit input:hover {
	background-color: transparent;
	color: #666;
	border: 1px solid #ffc400;
}
.main-contact{
	box-shadow: rgba(255, 227, 137, 0.4) 0 0 8px;
}
.form-control:focus {
	box-shadow: 2em;
}
.main-contact input::-webkit-input-placeholder,
.tnm-textarea textarea::-webkit-input-placeholder {
	/* Chrome */
	
	color: #666666;
	opacity: 1;
}
.main-contact input::-moz-placeholder,
.tnm-textarea textarea::-moz-placeholder {
	/* Firefox 19+ */
	
	color: #666666;
	opacity: 1;
}
#hastech {
	height: 360px;
	width: 100%;
}
.submit {
	text-align: center;
}

.leave-comment-text{
	padding-top: 15px;
	padding-bottom: 20px;
	padding-left:35px; 
	font-family: cursive;
	font-weight: 400;
	font-size: 34px;
}

.address, .telephone, .email{ 
	font-weight: 250;
	font-family:  sans-serif;
	font-size: 16px;
}
#hastech {
	height: 360px;
	width: 100%;
}

.contact-us-map-area{
	padding-left: 30px;
	padding-top: 20px
}

.maps{
	width:100%;
	border-radius: 10px;
	height:250px;
	background-color: azure
}

agm-map{
	height: inherit;
}

